# ripvec

./: .gitignore  .lsp.json  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  bacon.toml  design.md  ripvec-cuda.sqlite
.agents/plugins/: marketplace.json
.cargo/: config.toml
.claude/: settings.json
.claude/skills/cpu-development/: SKILL.md
.claude/skills/cuda-development/: SKILL.md
.claude/skills/driver-arch-patterns/: SKILL.md
.claude/skills/general-benchmarking/: SKILL.md
.claude/skills/general-debugging/: SKILL.md
.claude/skills/metal-debugging/: SKILL.md
.claude/skills/metal-debugging/references/: metal-pitfalls.md
.claude/skills/metal-kernels/: SKILL.md
.claude/skills/metal-profiling/: SKILL.md
.claude/skills/subagent-strategies/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml  release.yml
.github/workflows/: auto-tag.yml  ci.yml  gpu.yml  release.yml  test.yml
.ripvec/: .gitignore  config.toml
.tracemeld/baselines/: cpu-22L-baseline.baseline.json  cuda-22L-phase1-baseline.baseline.json  cuda-22L-phase2a-no-pool-clone.baseline.json  cuda-22L-react-baseline.baseline.json  cuda-22L-react-phase2c-softmax.baseline.json  cuda-22L-react-phase2d-fusion.baseline.json
crates/ripvec/: Cargo.toml
crates/ripvec-core/: Cargo.toml
crates/ripvec-core/benches/: pipeline.rs
crates/ripvec-core/examples/: token_dist.rs
crates/ripvec-core/src/: bm25.rs  chunk.rs  embed.rs  error.rs  hybrid.rs  index.rs  languages.rs  lib.rs  model.rs  profile.rs  repo_map.rs  similarity.rs  tokenize.rs  turbo_quant.rs  walk.rs
crates/ripvec-core/src/backend/: blas_info.rs  candle.rs  cpu.rs  cuda.rs  generic.rs  metal.rs  metal_kernels.rs  mlx.rs  mod.rs  nvrtc_cubin.rs  ort.rs  svd.rs
crates/ripvec-core/src/backend/arch/: classic_bert.rs  mod.rs  modern_bert.rs  nomic_bert.rs
crates/ripvec-core/src/backend/driver/: cpu.rs  cuda.rs  metal.rs  mlx.rs  mod.rs
crates/ripvec-core/src/cache/: config.rs  diff.rs  file_cache.rs  manifest.rs  mod.rs  reindex.rs  store.rs
crates/ripvec-mcp/: Cargo.toml
crates/ripvec-mcp/src/: main.rs  result.rs  server.rs  tools.rs
crates/ripvec-mcp/src/lsp/: call_hierarchy.rs  diagnostics.rs  hover.rs  mod.rs  navigation.rs  symbols.rs
crates/ripvec/src/: cli.rs  index_tui.rs  main.rs  output.rs  progress.rs
crates/ripvec/src/tui/: highlight.rs  index.rs  input.rs  mod.rs  ui.rs
crates/ripvec/tests/: integration.rs
docs/: CUDA_ARCHITECTURE.md  LEARNINGS.md  METAL_MPS_ARCHITECTURE.md  modernbert-architecture-notes.md
docs/superpowers/plans/: 2026-03-15-claude-code-rust-setup.md  2026-03-15-ripvec-implementation.md  2026-03-16-profiling.md  2026-03-18-backend-trait-refactor.md  2026-03-18-interactive-tui.md  2026-03-19-hybrid-scheduler.md  2026-03-20-ripvec-mcp.md  2026-03-26-modernbert-optimization.md  2026-03-27-hybrid-search.md  2026-03-29-inference-optimizations.md  2026-04-06-ci-multiarch-release.md  2026-04-06-repo-local-cache.md  2026-04-07-function-level-pagerank.md  2026-04-07-ripvec-lsp.md
docs/superpowers/specs/: 2026-03-15-claude-code-rust-setup-design.md  2026-03-16-profiling-design.md  2026-03-18-interactive-tui-design.md  2026-03-19-hybrid-scheduler-design.md  2026-03-20-ripvec-mcp-design.md  2026-03-24-repo-map-design.md  2026-03-27-hybrid-search-design.md  2026-03-29-inference-optimizations-design.md  2026-04-06-ci-multiarch-release-design.md  2026-04-06-repo-local-cache-design.md  2026-04-07-function-level-pagerank-design.md  2026-04-07-ripvec-lsp-design.md
plugins/.claude-plugin/: marketplace.json
plugins/ripvec/: .mcp.json  README.md
plugins/ripvec/.claude-plugin/: plugin.json
plugins/ripvec/.codex-plugin/: plugin.json
plugins/ripvec/hooks/: hooks.json
plugins/ripvec/scripts/: check-install.sh
plugins/ripvec/skills/change-impact/: SKILL.md
plugins/ripvec/skills/git-workflow/: SKILL.md
plugins/ripvec/skills/semantic-discovery/: SKILL.md
scripts/: bench-compare.sh  dev-setup.sh  fetch-corpus.sh  fetch-gutenberg.sh
scripts/bench/: ablation_layers.py  bench.py  pyproject.toml  recall_eval.py
scripts/bench/recall_baselines/: ablation_layers.json  baseline_hybrid.json  baseline_hybrid.jsonl  baseline_semantic.json  baseline_semantic.jsonl
scripts/bench/results/: 20260328T215349.json  20260328T215559.json  20260328T220752.json  20260328T220943.json  20260328T233229.json  20260328T233702.json  20260328T235138.json  20260329T000208.json  20260329T000341.json  20260329T001738.json  20260329T002307.json  20260329T004232.json  20260329T113752.json  20260329T180559.json  20260329T180833.json  20260329T180946.json  20260329T181008.json  20260329T181207.json  20260329T182144.json  20260329T184118.json  20260329T185641.json  20260329T192929.json  20260329T220434.json  20260329T225525.json  20260329T233335.json  20260329T233417.json  20260329T234125.json  20260329T234158.json  20260329T235428.json  20260330T031533.json  20260330T032441.json  20260330T032512.json  20260330T032539.json  20260330T034603.json  20260330T034701.json  20260330T034849.json  20260330T042046.json  20260330T044345.json  20260330T044426.json  20260330T053842.json  (+4 more)
scripts/benchmark/: benchmark_modernbert.py  pyproject.toml
tests/fixtures/: sample.js  sample.py  sample.rs
