[workspace]
members = ["crates/ripvec-core", "crates/ripvec", "crates/ripvec-mcp"]
default-members = ["crates/ripvec", "crates/ripvec-mcp"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fnordpig/ripvec"
readme = "README.md"

[workspace.dependencies]
bitcode = "0.6"

# Core inference
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"] }
tokenizers = "0.22.2"

# Code parsing
streaming-iterator = "0.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-toml-ng = "0.7"

# Parallelism and file traversal
rayon = "1.10"
ignore = "0.4"

# Tracing / profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# MCP server
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
toml = "0.8"

# Testing
assert_cmd = "2.1"
predicates = "3"
tempfile = "3"

[profile.release]
debug = 2              # full DWARF for profiling (samply, Instruments)
split-debuginfo = "off"  # keep symbols in binary, not dSYM

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow noisy pedantic lints that aren't worth fixing across the codebase
missing_errors_doc = "allow"
doc_markdown = "allow"
too_many_arguments = "allow"
similar_names = "allow"
many_single_char_names = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
map_unwrap_or = "allow"
