[package]
name = "ripvec-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for ripvec semantic code search"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
memmap2.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
rayon.workspace = true
ignore.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", optional = true }
mlx-rs = { version = "0.25", optional = true, features = ["safetensors"] }
blake3 = "1.8.3"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
dirs = "6.0.0"
serde = { workspace = true, features = ["derive"] }

[features]
default = ["accelerate"]
accelerate = ["candle-core/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
ort = ["dep:ort"]
mlx = ["dep:mlx-rs"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile.workspace = true
tokenizers = "0.22.2"

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
