[package]
name = "ripvec-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for semantic code search — find code by meaning using vector embeddings and PageRank dependency graphs"

[[bin]]
name = "ripvec-mcp"
path = "src/main.rs"

[dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.8.3" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
schemars.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify = "8.2.0"

[features]
default = []
cuda = ["ripvec-core/cuda"]
mlx = ["ripvec-core/mlx"]
metal = ["ripvec-core/metal"]

# Auto-enable platform-appropriate backends
[target.'cfg(target_os = "macos")'.dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.8.3", features = ["metal", "mlx", "cpu-accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.8.3", features = ["cpu"] }

[lints]
workspace = true
