[package]
name = "ripvec-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP + LSP server for ripvec — semantic code search, PageRank repo maps, and multi-language code intelligence"
rust-version.workspace = true
readme.workspace = true
keywords = ["mcp", "semantic-search", "code-search", "embeddings", "language-model"]
categories = ["development-tools", "text-processing"]

[[bin]]
name = "ripvec-mcp"
path = "src/main.rs"

[dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.13.11" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
schemars.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify = "8.2.0"
tower-lsp-server.workspace = true
tree-sitter.workspace = true

[features]
default = []
cuda = ["ripvec-core/cuda"]
mlx = ["ripvec-core/mlx"]
metal = ["ripvec-core/metal"]

# Auto-enable platform-appropriate backends
[target.'cfg(target_os = "macos")'.dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.13.11", features = ["metal", "mlx", "cpu-accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ripvec-core = { path = "../ripvec-core", version = "0.13.11", features = ["cpu"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ripvec-v{ version }-{ target }.tar.gz"
bin-dir = "ripvec-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[lints]
workspace = true
