[package]
name = "ripvec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Semantic code search CLI — like ripgrep but for meaning"

[[bin]]
name = "ripvec"
path = "src/main.rs"

[dependencies]
ripvec-core = { path = "../ripvec-core" }
clap.workspace = true
anyhow.workspace = true
rayon.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
owo-colors = "4"
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
tokenizers.workspace = true
ndarray = "0.17"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
notify = "8.2.0"

[features]
default = []
metal = ["ripvec-core/metal"]
cuda = ["ripvec-core/cuda"]
mlx = ["ripvec-core/mlx"]
accelerate = ["ripvec-core/accelerate"]
ort = ["ripvec-core/ort"]
cpu = ["ripvec-core/cpu"]

# Auto-enable Apple BLAS + MLX on macOS
[target.'cfg(target_os = "macos")'.dependencies]
ripvec-core = { path = "../ripvec-core", features = ["accelerate", "mlx"] }

# Linux: CPU by default, --features cuda to enable GPU
# (CUDA auto-detection would require probing for nvcc at build time)

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
